amend code for vis due to cleaned dataset changes

--- a/jupyter_notebooks/2.etl.ipynb
+++ b/jupyter_notebooks/2.etl.ipynb
@@ -46,16 +46,18 @@
         "\n",
         "### Ethical Considerations\n",
         "\n",
-        "* The customerID field is removed to prevent exposure of personally identifiable information (PII), ensuring data privacy and compliance with regulations such as GDPR and CCPA.\n",
+        "* The `customerID` field is removed to prevent exposure of personally identifiable information (PII), ensuring data privacy and compliance with regulations such as GDPR and CCPA.\n",
         "\n",
-        "* The SeniorCitizen and gender fields are initially included during exploratory analysis to understand demographic patterns influencing customer churn. These field will be excluded from the final prediction model to prevent potential demographic bias and ensure fairness in churn prediction. This decision aligns with ethical AI principles by focusing on behavioral and service-related factors rather than personal characteristics.\n",
+        "* The `SeniorCitizen` and `gender` fields are initially included during exploratory analysis to understand demographic patterns influencing customer churn. These fields will be excluded from the final prediction model to prevent potential demographic bias and ensure fairness in churn prediction. This decision aligns with ethical AI principles by focusing on behavioral and service-related factors rather than personal characteristics.\n",
         "\n",
         "### Outputs\n",
         "\n",
-        "* A cleaned dataset will be save as a CSV file below\n",
+        "* A cleaned dataset will be saved as a CSV file below\n",
         "    * [telecom_customer_churn_cleaned.csv](../dataset/processed/telecom_customer_churn_cleaned\n",
         "    .csv)\n",
-        "\n",
+        "* An encoded dataset will be saved as a CSV file below\n",
+        "    * [telecom_customer_churn_encoded.csv](../dataset/processed/telecom_customer_churn_encoded\n",
+        "    .csv)\n",
         "\n",
         "\n"
       ]
@@ -532,35 +534,33 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### 🧠 Pipeline Summary: Telecom Churn Data Preprocessing & Feature Engineering\n",
+        "### ETL Pipeline: Telecom Churn Data Preprocessing & Feature Engineering\n",
         "\n",
         "The preprocessing pipeline is designed to transform the raw Telecom Customer Churn dataset into a clean, machine-learning-ready format. It standardises data quality, engineers meaningful service-based features, and applies robust encoding and scaling methods to support predictive modelling.\n",
         "\n",
-        "#### 1️⃣ ETL & Data Cleaning (No Scaling)\n",
-        "**Purpose:** Prepare raw data for analysis by removing noise and ensuring data integrity.\n",
+        "#### **Dataset for EDA: ETL & Data Cleaning (No Scaling)**\n",
+        "* **Purpose:** Prepare raw data for analysis by removing noise and ensuring data integrity.\n",
         "\n",
-        "**Main Steps:**\n",
-        "- Drop personally identifiable information (`customerID`).\n",
-        "- ConvertI `TotalCharges` to numeric and impute missing values using: `TotalCharges` = `MonthlyCharges` * `tenure`\n",
-        "- Add derived features:\n",
-        "  - **CustomerType:** Phone only / Internet only / Both  \n",
-        "  - **NumInternetServices:** Count of active internet add-ons\n",
-        "- Handle missing values with median imputation for numerical columns.\n",
+        "* **Main Steps:**\n",
+        "    - Drop personally identifiable information (`customerID`).\n",
+        "    - Convert `TotalCharges` to numeric and impute missing values using: `TotalCharges` = `MonthlyCharges` * `tenure`\n",
+        "    - Convert `SeniorCitizen` to categorical variables\n",
+        "    - Add derived features:\n",
+        "    - **CustomerType:** Phone only / Internet only / Both  \n",
+        "    - **NumInternetServices:** Count of active internet add-ons\n",
+        "    - Handle missing values with median imputation for numerical columns.\n",
         "\n",
-        "📁 **Output:** `telecom_customer_churn_cleaned.csv`  \n",
-        "✅ Cleaned dataset for EDA (no scaling applied).\n",
+        "* **Output:** `telecom_customer_churn_cleaned.csv`  \n",
         "\n",
-        "---\n",
+        "#### **Dataset of ML Training: Feature Encoding & Scaling**\n",
+        "* **Purpose:** Prepare features for machine learning algorithms.\n",
         "\n",
-        "#### 2️⃣ Feature Encoding & Scaling (For Modeling)\n",
-        "**Purpose:** Prepare features for machine learning algorithms.\n",
+        "* **Transformations:**\n",
+        "    - **Numerical columns:** Standardized using `StandardScaler()`.\n",
+        "    - **Categorical columns:** One-hot encoded using `OneHotEncoder()` (drop first to avoid multicollinearity).\n",
         "\n",
-        "**Transformations:**\n",
-        "- **Numerical columns:** Standardized using `StandardScaler()`.\n",
-        "- **Categorical columns:** One-hot encoded using `OneHotEncoder()` (drop first to avoid multicollinearity).\n",
+        "* **Output:** `telecom_customer_churn_encoded.csv`  \n",
         "\n",
-        "📁 **Output:** `telecom_customer_churn_encoded.csv`  \n",
-        "✅ Fully processed dataset for ML training.\n",
         "\n",
         "---\n"
       ]
@@ -576,14 +576,14 @@
           "text": [
             "✅ ETL + Encoding pipeline completed successfully.\n",
             "Cleaned shape: (7043, 22)\n",
-            "Encoded shape: (7043, 27)\n",
-            "Categorical features: 17\n",
-            "Numeric features: 5\n",
-            "Data shape after encoding: (7043, 27)\n",
+            "Encoded shape: (7043, 28)\n",
+            "Categorical features: 18\n",
+            "Numeric features: 4\n",
+            "Data shape after encoding: (7043, 28)\n",
             "\n",
             "New Columns after One-Hot Encoding:\n",
             "\n",
-            "['tenure', 'MonthlyCharges', 'TotalCharges', 'NumInternetServices', 'gender_Male', 'Partner_Yes', 'Dependents_Yes', 'PhoneService_Yes', 'MultipleLines_No phone service', 'MultipleLines_Yes', 'InternetService_Fiber optic', 'InternetService_No', 'OnlineSecurity_Yes', 'OnlineBackup_Yes', 'DeviceProtection_Yes', 'TechSupport_Yes', 'StreamingTV_Yes', 'StreamingMovies_Yes', 'Contract_One year', 'Contract_Two year', 'PaperlessBilling_Yes', 'PaymentMethod_Credit card (automatic)', 'PaymentMethod_Electronic check', 'PaymentMethod_Mailed check', 'Churn_Yes', 'CustomerType_Internet only', 'CustomerType_Phone only'] \n",
+            "['tenure', 'MonthlyCharges', 'TotalCharges', 'NumInternetServices', 'gender_Male', 'SeniorCitizen_Yes', 'Partner_Yes', 'Dependents_Yes', 'PhoneService_Yes', 'MultipleLines_No phone service', 'MultipleLines_Yes', 'InternetService_Fiber optic', 'InternetService_No', 'OnlineSecurity_Yes', 'OnlineBackup_Yes', 'DeviceProtection_Yes', 'TechSupport_Yes', 'StreamingTV_Yes', 'StreamingMovies_Yes', 'Contract_One year', 'Contract_Two year', 'PaperlessBilling_Yes', 'PaymentMethod_Credit card (automatic)', 'PaymentMethod_Electronic check', 'PaymentMethod_Mailed check', 'Churn_Yes', 'CustomerType_Internet only', 'CustomerType_Phone only'] \n",
             "\n"
           ]
         }
@@ -648,6 +648,9 @@
         "        df['MonthlyCharges'] * df['tenure']\n",
         "    )\n",
         "\n",
+        "    # Convert SeniorCitizen to categorical\n",
+        "    df['SeniorCitizen'] = df['SeniorCitizen'].map({1: 'Yes', 0: 'No'})\n",
+        "\n",
         "    # Handle remaining missing values simply for EDA\n",
         "    df.fillna(df.median(numeric_only=True), inplace=True)\n",
         "\n",
@@ -709,6 +712,57 @@
         "assert df_cleaned.isnull().sum().sum() == 0, \"Missing values remain in the DataFrame\"\n",
         "\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 7043 entries, 0 to 7042\n",
+            "Data columns (total 28 columns):\n",
+            " #   Column                                 Non-Null Count  Dtype  \n",
+            "---  ------                                 --------------  -----  \n",
+            " 0   tenure                                 7043 non-null   float64\n",
+            " 1   MonthlyCharges                         7043 non-null   float64\n",
+            " 2   TotalCharges                           7043 non-null   float64\n",
+            " 3   NumInternetServices                    7043 non-null   float64\n",
+            " 4   gender_Male                            7043 non-null   float64\n",
+            " 5   SeniorCitizen_Yes                      7043 non-null   float64\n",
+            " 6   Partner_Yes                            7043 non-null   float64\n",
+            " 7   Dependents_Yes                         7043 non-null   float64\n",
+            " 8   PhoneService_Yes                       7043 non-null   float64\n",
+            " 9   MultipleLines_No phone service         7043 non-null   float64\n",
+            " 10  MultipleLines_Yes                      7043 non-null   float64\n",
+            " 11  InternetService_Fiber optic            7043 non-null   float64\n",
+            " 12  InternetService_No                     7043 non-null   float64\n",
+            " 13  OnlineSecurity_Yes                     7043 non-null   float64\n",
+            " 14  OnlineBackup_Yes                       7043 non-null   float64\n",
+            " 15  DeviceProtection_Yes                   7043 non-null   float64\n",
+            " 16  TechSupport_Yes                        7043 non-null   float64\n",
+            " 17  StreamingTV_Yes                        7043 non-null   float64\n",
+            " 18  StreamingMovies_Yes                    7043 non-null   float64\n",
+            " 19  Contract_One year                      7043 non-null   float64\n",
+            " 20  Contract_Two year                      7043 non-null   float64\n",
+            " 21  PaperlessBilling_Yes                   7043 non-null   float64\n",
+            " 22  PaymentMethod_Credit card (automatic)  7043 non-null   float64\n",
+            " 23  PaymentMethod_Electronic check         7043 non-null   float64\n",
+            " 24  PaymentMethod_Mailed check             7043 non-null   float64\n",
+            " 25  Churn_Yes                              7043 non-null   float64\n",
+            " 26  CustomerType_Internet only             7043 non-null   float64\n",
+            " 27  CustomerType_Phone only                7043 non-null   float64\n",
+            "dtypes: float64(28)\n",
+            "memory usage: 1.5 MB\n"
+          ]
+        }
+      ],
+      "source": [
+        "df_encoded.info()"
       ]
     },
     {
