update vis with trendline and highlight

--- a/jupyter_notebooks/3.data_visualization.ipynb
+++ b/jupyter_notebooks/3.data_visualization.ipynb
@@ -194,32 +194,32 @@
          "coloraxis": "coloraxis",
          "customdata": [
           [
-           "MonthlyCharges<br>Correlation: 0.193",
-           "TotalCharges<br>Correlation: 0.198",
-           "CustomerType_Phone only<br>Correlation: 0.228",
-           "Payment: Credit card (automatic)<br>Correlation: 0.134",
-           "Payment: Mailed check<br>Correlation: 0.092"
-          ],
-          [
-           "SeniorCitizen<br>Correlation: 0.151",
-           "Payment: Electronic check<br>Correlation: 0.302",
            "TechSupport<br>Correlation: 0.165",
-           "InternetService<br>Correlation: 0.228",
-           "Contract: Two year<br>Correlation: 0.302"
-          ],
-          [
-           "DeviceProtection<br>Correlation: 0.066",
+           "OnlineBackup<br>Correlation: 0.082",
            "OnlineSecurity<br>Correlation: 0.171",
-           "NumInternetServices<br>Correlation: 0.088",
-           "Partner<br>Correlation: 0.150",
-           "OnlineBackup<br>Correlation: 0.082"
+           "tenure<br>Correlation: 0.352",
+           "Contract: One year<br>Correlation: 0.178"
           ],
           [
-           "PaperlessBilling<br>Correlation: 0.192",
            "Internet: Fiber optic<br>Correlation: 0.308",
+           "Payment: Mailed check<br>Correlation: 0.092",
+           "MonthlyCharges<br>Correlation: 0.193",
+           "Payment: Electronic check<br>Correlation: 0.302",
+           "PaperlessBilling<br>Correlation: 0.192"
+          ],
+          [
+           "TotalCharges<br>Correlation: 0.198",
+           "Contract: Two year<br>Correlation: 0.302",
+           "InternetService<br>Correlation: 0.228",
            "Dependents<br>Correlation: 0.164",
-           "Contract: One year<br>Correlation: 0.178",
-           "tenure<br>Correlation: 0.352"
+           "DeviceProtection<br>Correlation: 0.066"
+          ],
+          [
+           "CustomerType_Phone only<br>Correlation: 0.228",
+           "Partner<br>Correlation: 0.150",
+           "NumInternetServices<br>Correlation: 0.088",
+           "SeniorCitizen<br>Correlation: 0.151",
+           "Payment: Credit card (automatic)<br>Correlation: 0.134"
           ]
          ],
          "hovertemplate": "%{customdata}<extra></extra>",
@@ -229,32 +229,32 @@
          "yaxis": "y",
          "z": [
           [
-           0.19335642223784671,
-           0.19832426260399572,
-           0.22789044975609363,
-           0.13430175066262845,
-           0.09168283858842928
-          ],
-          [
-           0.15088932817647233,
-           0.30191874901128496,
            0.16467355590159402,
-           0.22789044975609363,
-           0.30225346934965014
-          ],
-          [
-           0.06615979128028963,
+           0.08225486893814256,
            0.1712262919485523,
-           0.08769812711956369,
-           0.15044754495917623,
-           0.08225486893814256
+           0.3522286701130793,
+           0.1778200183499079
           ],
           [
-           0.19182533166646878,
            0.30801974494482276,
+           0.09168283858842928,
+           0.19335642223784671,
+           0.30191874901128496,
+           0.19182533166646878
+          ],
+          [
+           0.19832426260399572,
+           0.30225346934965014,
+           0.22789044975609363,
            0.1642214015797254,
-           0.1778200183499079,
-           0.3522286701130793
+           0.06615979128028963
+          ],
+          [
+           0.22789044975609363,
+           0.15044754495917623,
+           0.08769812711956369,
+           0.15088932817647233,
+           0.13430175066262845
           ]
          ]
         }
@@ -270,7 +270,7 @@
            "size": 9
           },
           "showarrow": false,
-          "text": "MonthlyCha..",
+          "text": "TechSupport",
           "x": 0,
           "y": 0
          },
@@ -283,7 +283,7 @@
            "size": 9
           },
           "showarrow": false,
-          "text": "TotalCharges",
+          "text": "OnlineBackup",
           "x": 1,
           "y": 0
          },
@@ -296,7 +296,7 @@
            "size": 9
           },
           "showarrow": false,
-          "text": "CustomerTy..",
+          "text": "OnlineSecu..",
           "x": 2,
           "y": 0
          },
@@ -309,7 +309,7 @@
            "size": 9
           },
           "showarrow": false,
-          "text": "Payment: C..",
+          "text": "tenure",
           "x": 3,
           "y": 0
          },
@@ -322,7 +322,7 @@
            "size": 9
           },
           "showarrow": false,
-          "text": "Payment: M..",
+          "text": "Contract: ..",
           "x": 4,
           "y": 0
          },
@@ -335,8 +335,34 @@
            "size": 9
           },
           "showarrow": false,
-          "text": "SeniorCiti..",
+          "text": "Internet: ..",
           "x": 0,
+          "y": 1
+         },
+         {
+          "bgcolor": "rgba(0, 0, 0, 0.1)",
+          "borderpad": 2,
+          "font": {
+           "color": "black",
+           "family": "Arial Black",
+           "size": 9
+          },
+          "showarrow": false,
+          "text": "Payment: M..",
+          "x": 1,
+          "y": 1
+         },
+         {
+          "bgcolor": "rgba(0, 0, 0, 0.1)",
+          "borderpad": 2,
+          "font": {
+           "color": "black",
+           "family": "Arial Black",
+           "size": 9
+          },
+          "showarrow": false,
+          "text": "MonthlyCha..",
+          "x": 2,
           "y": 1
          },
          {
@@ -349,32 +375,6 @@
           },
           "showarrow": false,
           "text": "Payment: E..",
-          "x": 1,
-          "y": 1
-         },
-         {
-          "bgcolor": "rgba(0, 0, 0, 0.1)",
-          "borderpad": 2,
-          "font": {
-           "color": "black",
-           "family": "Arial Black",
-           "size": 9
-          },
-          "showarrow": false,
-          "text": "TechSupport",
-          "x": 2,
-          "y": 1
-         },
-         {
-          "bgcolor": "rgba(0, 0, 0, 0.1)",
-          "borderpad": 2,
-          "font": {
-           "color": "black",
-           "family": "Arial Black",
-           "size": 9
-          },
-          "showarrow": false,
-          "text": "InternetSe..",
           "x": 3,
           "y": 1
          },
@@ -387,7 +387,7 @@
            "size": 9
           },
           "showarrow": false,
-          "text": "Contract: ..",
+          "text": "PaperlessB..",
           "x": 4,
           "y": 1
          },
@@ -400,7 +400,7 @@
            "size": 9
           },
           "showarrow": false,
-          "text": "DeviceProt..",
+          "text": "TotalCharges",
           "x": 0,
           "y": 2
          },
@@ -413,9 +413,74 @@
            "size": 9
           },
           "showarrow": false,
-          "text": "OnlineSecu..",
+          "text": "Contract: ..",
           "x": 1,
           "y": 2
+         },
+         {
+          "bgcolor": "rgba(0, 0, 0, 0.1)",
+          "borderpad": 2,
+          "font": {
+           "color": "black",
+           "family": "Arial Black",
+           "size": 9
+          },
+          "showarrow": false,
+          "text": "InternetSe..",
+          "x": 2,
+          "y": 2
+         },
+         {
+          "bgcolor": "rgba(0, 0, 0, 0.1)",
+          "borderpad": 2,
+          "font": {
+           "color": "black",
+           "family": "Arial Black",
+           "size": 9
+          },
+          "showarrow": false,
+          "text": "Dependents",
+          "x": 3,
+          "y": 2
+         },
+         {
+          "bgcolor": "rgba(0, 0, 0, 0.1)",
+          "borderpad": 2,
+          "font": {
+           "color": "black",
+           "family": "Arial Black",
+           "size": 9
+          },
+          "showarrow": false,
+          "text": "DeviceProt..",
+          "x": 4,
+          "y": 2
+         },
+         {
+          "bgcolor": "rgba(0, 0, 0, 0.1)",
+          "borderpad": 2,
+          "font": {
+           "color": "black",
+           "family": "Arial Black",
+           "size": 9
+          },
+          "showarrow": false,
+          "text": "CustomerTy..",
+          "x": 0,
+          "y": 3
+         },
+         {
+          "bgcolor": "rgba(0, 0, 0, 0.1)",
+          "borderpad": 2,
+          "font": {
+           "color": "black",
+           "family": "Arial Black",
+           "size": 9
+          },
+          "showarrow": false,
+          "text": "Partner",
+          "x": 1,
+          "y": 3
          },
          {
           "bgcolor": "rgba(0, 0, 0, 0.1)",
@@ -428,45 +493,6 @@
           "showarrow": false,
           "text": "NumInterne..",
           "x": 2,
-          "y": 2
-         },
-         {
-          "bgcolor": "rgba(0, 0, 0, 0.1)",
-          "borderpad": 2,
-          "font": {
-           "color": "black",
-           "family": "Arial Black",
-           "size": 9
-          },
-          "showarrow": false,
-          "text": "Partner",
-          "x": 3,
-          "y": 2
-         },
-         {
-          "bgcolor": "rgba(0, 0, 0, 0.1)",
-          "borderpad": 2,
-          "font": {
-           "color": "black",
-           "family": "Arial Black",
-           "size": 9
-          },
-          "showarrow": false,
-          "text": "OnlineBackup",
-          "x": 4,
-          "y": 2
-         },
-         {
-          "bgcolor": "rgba(0, 0, 0, 0.1)",
-          "borderpad": 2,
-          "font": {
-           "color": "black",
-           "family": "Arial Black",
-           "size": 9
-          },
-          "showarrow": false,
-          "text": "PaperlessB..",
-          "x": 0,
           "y": 3
          },
          {
@@ -478,33 +504,7 @@
            "size": 9
           },
           "showarrow": false,
-          "text": "Internet: ..",
-          "x": 1,
-          "y": 3
-         },
-         {
-          "bgcolor": "rgba(0, 0, 0, 0.1)",
-          "borderpad": 2,
-          "font": {
-           "color": "black",
-           "family": "Arial Black",
-           "size": 9
-          },
-          "showarrow": false,
-          "text": "Dependents",
-          "x": 2,
-          "y": 3
-         },
-         {
-          "bgcolor": "rgba(0, 0, 0, 0.1)",
-          "borderpad": 2,
-          "font": {
-           "color": "black",
-           "family": "Arial Black",
-           "size": 9
-          },
-          "showarrow": false,
-          "text": "Contract: ..",
+          "text": "SeniorCiti..",
           "x": 3,
           "y": 3
          },
@@ -517,7 +517,7 @@
            "size": 9
           },
           "showarrow": false,
-          "text": "tenure",
+          "text": "Payment: C..",
           "x": 4,
           "y": 3
          }
@@ -1454,7 +1454,7 @@
       "5. InternetService_No: 0.228\n",
       "\n",
       "🎲 Features displayed in random sequence on heatmap\n",
-      "Random seed used for reproducibility: 1762980856\n"
+      "Random seed used for reproducibility: 1368746184\n"
      ]
     }
    ],
@@ -1674,7 +1674,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/qx/sssvngh16h16kvg986485h1r0000gn/T/ipykernel_16878/3448030606.py:13: FutureWarning:\n",
+      "/var/folders/qx/sssvngh16h16kvg986485h1r0000gn/T/ipykernel_33789/3448030606.py:13: FutureWarning:\n",
       "\n",
       "\n",
       "\n",
@@ -68142,6 +68142,23 @@
          },
          "tracegroupgap": 0
         },
+        "shapes": [
+         {
+          "fillcolor": "LightSkyBlue",
+          "layer": "below",
+          "line": {
+           "width": 0
+          },
+          "opacity": 0.5,
+          "type": "rect",
+          "x0": -0.5,
+          "x1": 1.5,
+          "xref": "x",
+          "y0": 0,
+          "y1": 1,
+          "yref": "y domain"
+         }
+        ],
         "template": {
          "data": {
           "bar": [
@@ -69026,6 +69043,7 @@
     "fig.update_traces(texttemplate='%{y:.1%}', textposition='outside')\n",
     "fig.layout.height = 550\n",
     "fig.update_layout(yaxis_tickformat=\".0%\")\n",
+    "fig.add_vrect(x0=-0.5, x1=1.5, fillcolor=\"LightSkyBlue\", opacity=0.5, layer=\"below\", line_width=0)\n",
     "fig.show()"
    ]
   },
@@ -69134,6 +69152,33 @@
           0.0528169014084507
          ],
          "yaxis": "y"
+        },
+        {
+         "line": {
+          "color": "DarkOrange",
+          "dash": "dash"
+         },
+         "mode": "lines+markers",
+         "name": "Trendline",
+         "type": "scatter",
+         "x": [
+          0,
+          1,
+          2,
+          3,
+          4,
+          5,
+          6
+         ],
+         "y": [
+          0.5223665223665224,
+          0.4575569358178054,
+          0.35818005808325265,
+          0.2737030411449016,
+          0.22300469483568075,
+          0.1243432574430823,
+          0.0528169014084507
+         ]
         }
        ],
        "layout": {
@@ -69992,6 +70037,8 @@
     }
    ],
    "source": [
+    "import plotly.graph_objects as go\n",
+    "\n",
     "# Bar plot for NumInternetServices vs Churn rate\n",
     "selected_churn = [\"No\", \"Yes\"]\n",
     "filtered_df = df[df[\"InternetService\"] != \"No\"]\n",
@@ -69999,14 +70046,20 @@
     "\n",
     "# Melt the dataframe for plotly\n",
     "melted_churn = filtered_churn.melt(id_vars=\"NumInternetServices\", value_vars=selected_churn,\n",
-    "\t\t\t\t\t\t\t\t   var_name=\"Churn\", value_name=\"Rate\")\n",
+    "\t\t\t\t\t\t\t\tvar_name=\"Churn\", value_name=\"Rate\")\n",
     "\n",
     "fig = px.bar(melted_churn, x=\"NumInternetServices\", y=\"Rate\", color=\"Churn\",\n",
-    "\t\t\t barmode=\"group\", title=\"📡 Churn Rate vs Number of Internet Add-on Services\",\n",
-    "\t\t\t labels={\"Rate\": \"Churn Rate\", \"NumInternetServices\": \"Number of Internet Services\"})\n",
+    "\t\t\tbarmode=\"group\", title=\"📡 Churn Rate vs Number of Internet Add-on Services\",\n",
+    "\t\t\tlabels={\"Rate\": \"Churn Rate\", \"NumInternetServices\": \"Number of Internet Services\"})\n",
     "fig.update_traces(texttemplate='%{y:.1%}', textposition='outside')\n",
     "fig.update_layout(yaxis_tickformat=\".0%\")\n",
-    "fig.show()"
+    "\n",
+    "# Add trendline to churn yes\n",
+    "churn_yes = melted_churn[melted_churn[\"Churn\"] == \"Yes\"]\n",
+    "fig.add_traces(go.Scatter(x=churn_yes[\"NumInternetServices\"], y=churn_yes[\"Rate\"],\n",
+    "\t\t\t\t\t\t\tmode='lines+markers', name='Trendline',\n",
+    "\t\t\t\t\t\t\tline=dict(color='DarkOrange', dash='dash')))\n",
+    "fig.show()\n"
    ]
   },
   {
